--- a/website/views/menu.pug
+++ b/website/views/menu.pug
@@ -15,4 +15,5 @@ block content
             li
               a(href=product.url)
                 img(src=product.image.src, alt=product.image.alt)/
-              h2 #{product.name}
+              a(href=product.url)
+                h2 #{product.name}
